<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.AccountFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/account_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_player_name"
            android:textAlignment="center"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/account_player_wins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wins"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/account_player_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/games"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/account_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/refresh_profile"
            android:src="@drawable/ic_refresh_icon" />


    </LinearLayout>

    <Button
        android:id="@+id/account_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>